minor bug fix and home page footer fix

--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -15,7 +15,7 @@
       <div class ="text-right">
         <td><%= link_to 'Show', clients_path %></td>
         <td><%= link_to 'Edit', edit_client_path(@clients) %></td>
-        <td><%= link_to 'Destroy', trainer, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Destroy', '#', method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </div>
       </tr>
   </tbody>
