--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,23 +1,25 @@
-
+<!-- Page Container -->
 <div class="container">
-    <!-- Large Feature Box -->
-    <div class="hero">
-      <br />
-      <div class="frosty col-10 offset-1 text-center">
-        <br />
-        <h1>Core Trainer</h1>
-        <br />
-          <h2>A tool for Personal Trainers and Members to connect</h2>
-        <br />
-        <div class="btn">
-           <a class="btn btn-start" href="#down">Learn more</a>
-        <br /><br />
-      </div>
-    </div>
+    
+  <!-- Large Feature Box -->
+  <div class="hero">
     <br />
-</div>
+    <div class="frosty col-10 offset-1 text-center">
+      <br />
+      <h1>Core Trainer</h1>
+      <br />
+      <h2>A tool for Personal Trainers and Members to connect</h2>
+      <br />
+      <div class="btn">
+         <a class="btn btn-start" href="#down">Learn more</a>
+      </div>
+      <br>
+      <br>
+    </div>
+  </div>
+  <br />
 
-    <!--First 3 Feature Box -->
+  <!--First 3 Feature Box -->
   <div class="row feature text-center col-12 offset-1">
     <!-- Left Box -->
     <div class="col-12 col-sm">
@@ -33,6 +35,7 @@
     </div>
   </div>
 
+  <!-- Sign up button -->
   <div class= "text-center">
     <%= link_to "Get started today", new_user_registration_path, class: 'btn-lg btn btn-info' %>
   </div>
@@ -40,52 +43,52 @@
   
  
 
-<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0.alpha6/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0.alpha6/js/bootstrap.min.js"></script>
-<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+  <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0.alpha6/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+  <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0.alpha6/js/bootstrap.min.js"></script>
+  <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+  <br>
+  <br>
 
-<!-- First Images Display -->
-<div class="container">
-  <br>
-  <br>
-  <div class="block">
-    <div class="row">
-      <div class="span4">
-        <img class="img-left w-50 p-3" src="https://images.unsplash.com/photo-1517836357463-d25dfeac3438?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80"/>
-        <br>
-        <div class="content-heading"><h3>Manage Workouts</h3></div>
-        <br>
-        <p>Donec id elit non mi porta gravida at eget metus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. Donec id elit non mi porta gravida at eget metus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. Donec id elit non mi porta gravida at eget metus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
+  <!-- First Images Display -->
+  <div class="container">
+    <div class="block">
+      <div class="row">
+        <div class="span4">
+          <img class="img-left w-50 p-3" src="https://images.unsplash.com/photo-1517836357463-d25dfeac3438?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80"/>
+          <br>
+          <div class="content-heading"><h3>Manage Workouts</h3></div>
+          <br>
+          <p>Donec id elit non mi porta gravida at eget metus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. Donec id elit non mi porta gravida at eget metus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. Donec id elit non mi porta gravida at eget metus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
+        </div>
       </div>
-    </div>
-    <br/>
-    <br>
-    <div class="row">
-      <div class="span4">
-        <img class="img-right w-50 p-3" src="https://images.unsplash.com/photo-1535743686920-55e4145369b9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1189&q=80"/>
-        <br>
-        <div class="content-heading"><h3>Connect with a Trainer</h3></div>
-        <br>
-        <p>Donec id elit non mi porta gravida at eget metus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. Donec id elit non mi porta gravida at eget metus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. Donec id elit non mi porta gravida at eget metus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
+      <br>
+      <br>
+      <div class="row">
+        <div class="span4">
+          <img class="img-right w-50 p-3" src="https://images.unsplash.com/photo-1535743686920-55e4145369b9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1189&q=80"/>
+          <br>
+          <div class="content-heading"><h3>Connect with a Trainer</h3></div>
+          <br>
+          <p>Donec id elit non mi porta gravida at eget metus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. Donec id elit non mi porta gravida at eget metus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. Donec id elit non mi porta gravida at eget metus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
+        </div>
       </div>
-    </div>
-    <br>
-    <br>
-    <div class="row">
-      <div class="span4">
-        <img class="img-left w-50 p-3" src="https://images.unsplash.com/photo-1517963628607-235ccdd5476c?ixlib=rb-1.2.1&auto=format&fit=crop&w=1051&q=80"/>
-        <br>
-        <div class="content-heading"><h3>Record Your Progress</h3></div>
-        <br>
-        <p>Donec id elit non mi porta gravida at eget metus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. Donec id elit non mi porta gravida at eget metus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. Donec id elit non mi porta gravida at eget metus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
-        <br>
-        <br>
+      <br>
+      <br>
+      <div class="row">
+        <div class="span4">
+          <img class="img-left w-50 p-3" src="https://images.unsplash.com/photo-1517963628607-235ccdd5476c?ixlib=rb-1.2.1&auto=format&fit=crop&w=1051&q=80"/>
+          <br>
+          <div class="content-heading"><h3>Record Your Progress</h3></div>
+          <br>
+          <p>Donec id elit non mi porta gravida at eget metus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. Donec id elit non mi porta gravida at eget metus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. Donec id elit non mi porta gravida at eget metus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
+          <br>
+          <br>
+        </div>
       </div>
     </div>
   </div>
   
-  <!-- Signup Button -->
-  <!-- This button is linked to learn more button at top of page via id="down" DO NOT REMOVE -->
+  <!-- Sign up Button linked to learn more button at top of page via id="down" DO NOT REMOVE -->
   <br>
   <div id="down">
     <div class="col-10 offset-1">
@@ -95,11 +98,12 @@
   <br />
   <br />
 
-  
   <div class="image">
     <img class="w-60 p-4" src="https://images.unsplash.com/photo-1522898467493-49726bf28798?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2550&q=80">
     <br>
   </div>
+<!-- End of 'page container' div below this line -->
+</div>
 
 
 <br>
