Enables crud functions for 'Sessions'

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
 
   <!-- Body-->
   <body>
+    <!-- Nav Bar-->
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <!-- Brand -->
     <%= link_to 'Core Trainer', root_path, class: 'navbar-brand' %>
@@ -37,6 +38,8 @@
       </ul>
     </div>
   </nav>
+  <br>
+  <br>
   <br>
 
     <!-- Devise Alerts -->
