--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -102,8 +102,8 @@
     <img class="w-60 p-4" src="https://images.unsplash.com/photo-1522898467493-49726bf28798?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2550&q=80">
     <br>
   </div>
-<!-- End of 'page container' div below this line -->
 </div>
+<!-- End of 'page container' div above this line -->
 
 
 <br>
