adds functionality to create clients

--- a/app/views/clients/new.html.erb
+++ b/app/views/clients/new.html.erb
@@ -2,6 +2,6 @@
 
 
 
-<%= render 'form', user: @user %>
+<%= render 'form', client: @client %>
 
-<%= link_to 'Back', clients_path %>
+<%= link_to 'Back', clients_path, class: 'btn btn-warning button btn-md' %>
