--- a/app/views/clients/_form.html.erb
+++ b/app/views/clients/_form.html.erb
@@ -1,13 +1,21 @@
+<div class="booyah-box">
+	<%= simple_form_for(@client) do |f| %>
+	  <%= f.error_notification %>
+	  <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
 
-<%= simple_form_for(@client) do |f| %>
-  <%= f.error_notification %>
-  <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
+	  <div class="form-inputs">
+		  <%= f.input :height %>
+	    <%= f.input :birthday %>
+	    <%= f.input :injuries %>
+	    <%= f.input :goals %>
+	    <%= f.input :athletic_background %>
+	    <%= f.input :work_history %>
+			<%= f.input :location %>
+			<%= f.input :notes %>
+	  </div>
 
-  <div class="form-inputs">
-		
-  </div>
-
-  <div class="form-actions">
-    <%= f.button :submit %>
-  </div>
-<% end %>
+	  <div class="form-actions">
+	    <button class="btn btn-success button btn-md"><%= f.button :submit %></button>
+	  </div>
+	<% end %>
+</div>
