--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -1,30 +1,49 @@
 <p id="notice"><%= notice %></p>
-<div class="booyah-box col-10 offset-1 text-center">
-  <h4>Member Dashboard</h4>
-</div>
 
-<table>
-  <thead>
-    <tr>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
+<h4>Member Dashboard</h4>
+<div class="booyah-box">
+  <table>
+    <thead>
       <tr>
-      <div class ="text-right">
-        <td><%= link_to 'Show', clients_path %></td>
-        <td><%= link_to 'Edit', edit_client_path(@clients) %></td>
-        <td><%= link_to 'Destroy', '#', method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </div>
+        <th>Height</th>
+        <th>Birthday</th>
+        <th>Injuries</th>
+        <th>Goals</th>
+        <th>Athletic Background</th>
+        <th>Work History</th>
+        <th>Location</th>
+        <th>Notes</th>
+        <th colspan="3"></th>
       </tr>
-  </tbody>
-</table>
+    </thead>
 
+    <tbody>
+      <% @clients.each do |client| %>
+        <tr>
+          <td><%= client.height %></td>
+          <td><%= client.birthday %></td>
+          <td><%= client.injuries %></td>
+          <td><%= client.goals %></td>
+          <td><%= client.athletic_background %></td>
+          <td><%= client.work_history %></td>
+          <td><%= client.location %></td>
+          <td><%= client.notes %></td>
+          <td><%= link_to 'Show', clients_path %></td>
+          <td><%= link_to 'Edit', edit_client_path(@clients) %></td>
+          <td><%= link_to 'Destroy', '#', method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
 <br>
-<%= link_to 'New Member', new_client_path %>
+<%= link_to 'New Member', new_client_path, class: 'btn btn-success button btn-md' %>
+<br>
+<hr>
+<hr>
 <br>
 
+<!-- I think we'll need to move these forms to another file - MD -->
 <div style="display: inline-block; vertical-align: top; width: 12%" class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
   <a onclick="$(this).parent().find('a').removeClass('active')" class="nav-link active" id="info-tab" data-toggle="pill" href="#info" role="tab" aria-controls="info" aria-selected="true">Member Info</a>
   <a onclick="$(this).parent().find('a').removeClass('active')" class="nav-link" id="check-tab" data-toggle="pill" href="#check" role="tab" aria-controls="check" aria-selected="false">Check-ins</a>
