--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -24,7 +24,8 @@
       <%= f.input :password_confirmation,
                   required: true,
                   input_html: { autocomplete: "new-password" } %>
-     <%= f.input :role, as: :radio_buttons, collection: [['client', 'Member'], ['trainer', 'Trainer']], label_method: :second, value_method: :first, required: true %>
+      <%= f.label :role %>
+      <%= f.select :role, options_for_select([["Member", 0], ["Trainer", 1]]) %>
      <br>
     </div>
     <div class="form-actions">
