--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -68,10 +68,11 @@
   <div class="tab-pane fade" id="check" role="tabpanel" aria-labelledby="check-tab">
   <%# Checkin form %>
 <div class="booyah-box text-left col-10 offset-1">
-  <%= simple_form_for '#' do |f| %> 
+  <%= simple_form_for workoutlogs_path(@workoutlog) do |f| %> 
     <%= f.input :weight, :placeholder => "i.e. 175 lbs"%>
     <%= f.input :mood, :placeholder =>"i.e. stressed"%>
     <%= f.input :notes %>
+    <%= f.input :text %>
     <%= f.button :submit, 'Add Checkin', class: "btn-primary" %>
     <%= f.button :button, "Cancel", type: "reset", class: "btn-outline-secondary" %></i>
   <% end %> 
