--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -1,1 +1,14 @@
 <%= render :partial => "client", :locals => {:client => @client, :readonly => true}%>
+<br />
+<div class="booyah-box col-10 offset-1">
+  <h1 class="text-center">
+    <br />
+    <%= @client.user.name%>
+    <br />
+    <%= @client.location%>
+    <br />
+    <%= @client.goals%>
+    <br />
+  </h1>
+</div>
+<br />
