--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -31,7 +31,7 @@
   </table>
 </div>
 <br>
-<%= link_to 'New Member', new_client_path, class: 'btn btn-success button btn-md' %>
+<%= link_to 'View Trainers', trainers_path , class: 'btn btn-success button btn-md' %>
 <br>
 <hr>
 <hr>
