--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,8 +51,9 @@
     <% end %>
 
     <!-- Render View -->
+  <div class="container">
     <%= yield %>
-    
+  </div>
     <!-- Footer -->
     <footer class="fixed-bottom footer text-center">
       <!-- Credits -->
@@ -60,7 +61,6 @@
         <a href="https://github.com/CTfive"> CTFive</a>
       </div>
     </footer>
-  
   <!-- End of Body -->
   </body>
 </html>
