--- a/app/assets/stylesheets/trainers/appointments.scss
+++ b/app/assets/stylesheets/trainers/appointments.scss
@@ -1,3 +1,3 @@
-// Place all the styles related to the Relations controller here.
+// Place all the styles related to the trainers/appointments controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
