--- a/app/views/clients/_form.html.erb
+++ b/app/views/clients/_form.html.erb
@@ -8,8 +8,8 @@
 	    <%= f.input :birthday %>
 	    <%= f.input :injuries %>
 	    <%= f.input :goals %>
-	    <%= f.input :athletic_background %>
-	    <%= f.input :work_history %>
+	    <%= f.input :athletic_history %>
+	    <%= f.input :current_work %>
 			<%= f.input :location %>
 			<%= f.input :notes %>
 	  </div>
