--- a/app/views/clients/_client.html.erb
+++ b/app/views/clients/_client.html.erb
@@ -1,6 +1,6 @@
 <% readonly = false if local_assigns[:readonly].nil?%>
 
-<h4>Member Dashboard</h4>
+<h4>Clients</h4>
 
 <!-- I think we'll need to move these forms to another file - MD -->
 <div style="display: inline-block; vertical-align: top; width: 12%" class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
