--- a/app/views/clients/edit.html.erb
+++ b/app/views/clients/edit.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<h4>Member Dashboard</h4>
+<h4>Clients</h4>
 <div class="booyah-box">
   <table style="table-layout: fixed; width: 100%;"> 
     <tbody>
