--- a/app/views/trainers/index.html.erb
+++ b/app/views/trainers/index.html.erb
@@ -1,5 +1,7 @@
 <p id="notice"><%= notice %></p>
 
+<h4>Trainers</h4>
+
 <div class="booyah-box">
   <table style="table-layout: fixed; width: 100%;"> 
     <thead>
