--- a/app/views/trainers/show.html.erb
+++ b/app/views/trainers/show.html.erb
@@ -11,6 +11,8 @@
   <%= link_to 'Edit', edit_trainer_path(@trainer) %>
   <%= link_to 'Destroy', '#', method: :delete, data: { confirm: 'Are you sure?' } %>
   <%= link_to 'Create Workout', new_trainer_workout_path(@trainer) %>
+  <%= link_to 'Trainer Workouts', trainer_workout_path(@trainer) %>
+
 </div>
 <br>
 <br>
