--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,10 @@
       <ul class="navbar-nav mr-auto">
         <% if user_signed_in?%>
           <li class="nav-item">
-            <%= link_to 'My Dashboard', clients_path, class: 'nav-link' %>
+            <%= link_to 'Clients', clients_path, class: 'nav-link' %>
+          </li>
+          <li class="nav-item">
+            <%= link_to 'Trainers', trainers_path, class: 'nav-link' %>
           </li>
           <li class="nav-item">
             <%= link_to 'Sign out', destroy_user_session_path, method: :delete, class: 'nav-link' %>
