--- a/app/views/trainers/workouts/_form.html.erb
+++ b/app/views/trainers/workouts/_form.html.erb
@@ -1,5 +1,5 @@
 
-<%= simple_form_for(@workout) do |f| %>
+<%= simple_form_for new_trainer_workout_path(@workout) do |f| %>
   <%= f.error_notification %>
   <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
 
