--- a/app/views/trainers/workouts/edit.html.erb
+++ b/app/views/trainers/workouts/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form', workout: @workout %>
 
-<%= link_to 'Show', @workout %> |
-<%= link_to 'Back', workouts_path %>
+<%= link_to 'Show', trainer_workout_path(@workout) %> |
+
