--- a/app/views/clients/workoutlogs/new.html.erb
+++ b/app/views/clients/workoutlogs/new.html.erb
@@ -5,9 +5,8 @@
     <%= f.input :weight, :placeholder => "i.e. 175 lbs"%>
     <%= f.input :mood, :placeholder =>"i.e. stressed"%>
     <%= f.input :notes %>
-    <%= f.button :submit, 'Add Checkin', class: "btn-primary" %>
+    <%= f.button :submit, 'Add Workout', class: "btn-primary" %>
     <%= f.button :button, "Cancel", type: "reset", class: "btn-outline-secondary" %></i>
   <% end %> 
 
-  <%= render 'form', workoutlog: @workoutlog %>
 </div>
