--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
     <!-- Nav Bar-->
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <!-- Brand -->
-    <%= link_to 'Core Trainer', user_root_path, class: 'navbar-brand' %>
+    <%= link_to 'Core Trainer', root_path, class: 'navbar-brand' %>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
