--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -59,7 +59,7 @@ h1, h2, h3, h4, h5, h6, .navbar {
   border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
   border-radius: 3px;
   padding: 10px;
-  background: image_url('dark-paths.png');
+  background: image_url('prism.png');
 }
 
 
