--- a/app/views/clients/_form.html.erb
+++ b/app/views/clients/_form.html.erb
@@ -4,8 +4,8 @@
 	  <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
 
 	  <div class="form-inputs">
-		  <%= f.input :height %>
-	    <%= f.input :birthday %>
+		  <%= f.input :height, as: :float %>
+	    <%= f.input :birthday, as: :date, order: [:month, :day, :year] %>
 	    <%= f.input :injuries %>
 	    <%= f.input :goals %>
 	    <%= f.input :athletic_history %>
