--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,7 +38,7 @@
             <%= link_to 'My Clients', "#", class: 'nav-link' %>
           </li>
           <li class="nav-item">
-            <%= link_to 'My Workouts', trainer_workout_path(@workout), class: 'nav-link' %>
+            <%= link_to 'My Workouts', "#", class: 'nav-link' %>
           </li>
           <li class="nav-item">
             <%= link_to 'Sign out', destroy_user_session_path, method: :delete, class: 'nav-link' %>
