--- a/app/views/trainers/_form.html.erb
+++ b/app/views/trainers/_form.html.erb
@@ -3,24 +3,20 @@
 	<%= simple_form_for(@trainer) do |f| %>
 		<%= f.error_notification %>
 		<%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
-		
-		<div class="form-inputs">
-			<%= simple_form_for trainers_path(@trainer) do |f| %>
-				<%= f.error_notification %>
-				<%= f.input :athletic_background %>
-				<%= f.input :started_training, as: :date, order: [:month, :day, :year] %>
-				<%= f.input :specialties %>
-				<%= f.input :bio %>
-				<%= f.input :availability %>
-				<%= f.input :location %>
-				<%= f.input :certificate_id %>
-				<%= f.input :other_credentials %>
-				
-				<div class="form-actions">
-					<%= f.button :submit, 'Submit your info', class: "btn-primary" %>
-				</div>
-			<% end %>
-		</div>
+			<%= simple_form_for trainers_path(@trainer) do |f| %> 
+			<%= f.error_notification %>
+			<%= f.input :athletic_background, as: :text %>
+			<%= f.input :started_training, as: :date %>
+			<%= f.input :specialties, as: :text %>
+			<%= f.input :bio, as: :text %>
+			<%= f.input :availability, as: :text %>
+			<%= f.input :location, as: :string %>
+			<%= f.input :certificate_id, as: :string %>
+			<%= f.input :other_credentials, as: :text %>
+			<div class="form-actions">
+				<%= f.button :submit, class: "btn-primary" %>
+			</div>
+		<% end %>
 	<% end %>
 </div>
 <br>
