--- a/app/views/appointments/new.html.erb
+++ b/app/views/appointments/new.html.erb
@@ -1,1 +1,18 @@
-<h1>Yeeeet</h1>
+<h2>Schedule An Appointment</h2>
+
+<div class="booyah-box">
+	<%= simple_form_for(@appointment) do |f| %>
+	  <%= f.error_notification %>
+	  <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
+
+	  <div class="form-inputs">
+		  <%= f.input :start_date, as: :date, order: [:month, :day, :year] %>
+		  <%= f.input :end_date, as: :date, order: [:month, :day, :year] %>
+
+	  </div>
+
+	  <div class="form-actions">
+	    <%= f.button :submit, 'Schedule Appointment', class: "btn-primary" %>
+	  </div>
+	<% end %>
+</div>
