--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
     <!-- Nav Bar-->
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <!-- Brand -->
-    <%= link_to 'Core Trainer', user_root_path, class: 'navbar-brand' %>
+    <%= link_to 'Core Trainer', root_path, class: 'navbar-brand' %>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -28,14 +28,14 @@
             <%= link_to 'Trainers', trainers_path, class: 'nav-link' %>
           </li>
           <li class="nav-item">
-            <%= link_to 'Profile', "#", class: 'nav-link' %>
+            <%= link_to 'Profile', clients_path, class: 'nav-link' %>
           </li>
           <li class="nav-item">
             <%= link_to 'Sign out', destroy_user_session_path, method: :delete, class: 'nav-link' %>
           </li>
         <% when user_signed_in? && current_user.trainer? %>
           <li class="nav-item">
-            <%= link_to 'My Clients', "#", class: 'nav-link' %>
+            <%= link_to 'My Clients',  trainer_client , class: 'nav-link' %>
           </li>
           <li class="nav-item">
             <%= link_to 'My Workouts', "#", class: 'nav-link' %>
