--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -4,7 +4,7 @@
     we need a profile pic, we need a list of all the clients trainers. 
     add things that you would like to be in your profile and add some SICK syling :)%>
 
-<h4>Your Profile</h4>
+<h4>Profile</h4>
 <div class="booyah-box">
   <table style="table-layout: fixed; width: 100%;"> 
     <thead>
