--- a/app/views/trainers/index.html.erb
+++ b/app/views/trainers/index.html.erb
@@ -21,13 +21,13 @@
         <td><%=raw trainer.started_training || "&nbsp;" %></td>
         <td><%=raw trainer.availability || "&nbsp;" %></td>
         <% if current_user.trainer? %>
-        <td><%= link_to 'Edit', edit_trainer_path(trainer) %></td>
-        <td><%= link_to 'Destroy', '#', method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <td><%= link_to 'Edit', edit_trainer_path(trainer) %></td>
+          <td><%= link_to 'Destroy', '#', method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% end %>
       </tr>
     <% end %>
   </tbody>
 </table>
-
 <br>
 <br>
 <hr>
