--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,10 +35,10 @@
           </li>
         <% when user_signed_in? && current_user.trainer? %>
           <li class="nav-item">
-            <%= link_to 'My Clients',  trainer_client , class: 'nav-link' %>
+            <%= link_to 'My Clients',  "#" , class: 'nav-link' %>
           </li>
           <li class="nav-item">
-            <%= link_to 'My Workouts', user_trainer_workouts_path(@trainer), class: 'nav-link' %>
+            <%= link_to 'My Workouts', "#", class: 'nav-link' %>
           </li>
           <li class="nav-item">
             <%= link_to 'Sign out', destroy_user_session_path, method: :delete, class: 'nav-link' %>
