--- a/app/views/trainers/_form.html.erb
+++ b/app/views/trainers/_form.html.erb
@@ -14,7 +14,7 @@
 			<%= f.input :certificate_id, as: :string %>
 			<%= f.input :other_credentials, as: :text %>
 			<div class="form-actions">
-				<%= f.button :submit, class: "btn-primary" %>
+				<%= f.button :submit, "Continue", class: "btn-primary" %>
 			</div>
 		<% end %>
 	<% end %>
